@@ -1063,14 +1063,18 @@ target_link_libraries(libscip
     ${LAPACK_LIBRARIES}
     ${PAPILO_IMPORTED_TARGETS})
 
+set(SOPLEX_NEEDED 0)
+set(ZIMPL_NEEDED 0)
 if(SHARED)
-    set(SOPLEX_NEEDED 0)
-    set(ZIMPL_NEEDED 0)
     target_link_libraries(libscip PRIVATE ${ZIMPL_PIC_LIBRARIES} ${LPS_PIC_LIBRARIES} ${SYM_PIC_LIBRARIES})
     add_executable(scip main.c ${scipsources} ${objscipsources} ${lpisources} ${tpisources} ${symsources})
 else()
-    set(SOPLEX_NEEDED ${SOPLEX_FOUND})
-    set(ZIMPL_NEEDED ${ZIMPL_FOUND})
+    if(SOPLEX_FOUND)
+        set(SOPLEX_NEEDED 1)
+    endif()
+    if(ZIMPL_FOUND)
+        set(ZIMPL_NEEDED 1)
+    endif()
     target_link_libraries(libscip PRIVATE ${ZIMPL_LIBRARIES} ${LPS_LIBRARIES} ${SYM_LIBRARIES})
     add_executable(scip main.c)
     target_link_libraries(scip PUBLIC libscip)
